implemented simple webpage wrapping Alan's java code

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -2,5 +2,13 @@
 <web-app version="2.5" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 >
-	<!-- This is only here because Maven requires it to make a war. -->
+	<display-name>SimpleCalculator</display-name>
+	<servlet>
+        <servlet-name>SimpleCalculator</servlet-name>
+        <servlet-class>calculator.InputAnswerTest</servlet-class>
+    </servlet>
+	<servlet-mapping>
+	    <servlet-name>SimpleCalculator</servlet-name>
+        <url-pattern>/*</url-pattern>
+	</servlet-mapping>
 </web-app>
